Fix horizontal scroll

--- a/src/app/components/result/result.component.scss
+++ b/src/app/components/result/result.component.scss
@@ -45,7 +45,7 @@
         margin-top: 1em;
         padding: 2em;
         ul {
-            overflow-x: scroll;
+            overflow-y: scroll;
 
             width: 100%;
             height: 350px;
